# retro

./: .gitignore  Makefile  docker-compose.yaml
.github/workflows/: build.yml
backend/: Cargo.toml  Dockerfile  package-lock.json  package.json  server.js
backend/src/: auth.rs  context.rs  database.rs  main.rs  models.rs  schema.rs
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  populate_env.sh
frontend/src/: ApolloProvider.js  App.js
frontend/src/components/: CardComponent.js  Column.js  HomePage.js  LoginForm.js  RetroList.js  RetroPage.js  Sidebar.js  StepBar.js  UsernameForm.js
