# Cargo.toml

[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
juniper = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
juniper_graphql_ws = { version = "0.4", features = ["graphql-transport-ws"] }
tokio-stream = { version = "0.1.16", features = ["sync"] }
actix-web = "4.9.0"
actix-cors = "0.7.0"
juniper_actix = { version = "0.6.0", features = ["subscriptions"] }
env_logger = "0.11.5"
